--- a/src/main/resources/com/hotelalura/vista-saludar.fxml
+++ b/src/main/resources/com/hotelalura/vista-saludar.fxml
@@ -6,11 +6,11 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.hotelalura.hotelalura.HelloController">
+      fx:controller="com.hotelalura.ControladorSaludar">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
     <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Button text="¡Saludar!" onAction="#onHelloButtonClick"/>
 </VBox>
